first test case

--- a/configurations/config.properties
+++ b/configurations/config.properties
@@ -1,1 +1,1 @@
-baseUrl=http://automationpractice.com/index.php?controller=authentication&back=my-account
+baseUrl=http://automationpractice.com/index.php
