--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,12 @@
 		    <version>5.1.0</version>
 		</dependency>
 		
+  		
   		 <dependency>
 		    <groupId>org.testng</groupId>
 		    <artifactId>testng</artifactId>
 		    <version>7.4.0</version>
-		    <scope>test</scope>
+		    <scope>compile</scope>
 		</dependency>
   	
   		</dependencies>
